feat: add tasks search

--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -107,6 +107,9 @@ img{
 .active{
     color: darkred;
 }
+.tasks-wrapper.hidden{
+    display: none;
+}
 /* #endregion General Utilities */
 
 /* #region Flex-Utilities */
