--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -110,6 +110,21 @@ img{
 .tasks-wrapper.hidden{
     display: none;
 }
+.fade-enter-active,
+.fade-leave-active {
+    transition: all 0.4s ease;
+}
+.fade-leave-active{
+    position: absolute;
+}
+.fade-enter-from,
+.fade-leave-to {
+    opacity: 0;
+    transform: scale(0.6);
+}
+.fade-move {
+    transition: all 0.3s ease;
+}
 /* #endregion General Utilities */
 
 /* #region Flex-Utilities */
