--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -110,19 +110,19 @@ img{
 .tasks-wrapper.hidden{
     display: none;
 }
-.fade-enter-active,
-.fade-leave-active {
+.list-enter-active,
+.list-leave-active {
     transition: all 0.4s ease;
 }
-.fade-leave-active{
+.list-leave-active{
     position: absolute;
 }
-.fade-enter-from,
-.fade-leave-to {
+.list-enter-from,
+.list-leave-to {
     opacity: 0;
     transform: scale(0.6);
 }
-.fade-move {
+.list-move {
     transition: all 0.3s ease;
 }
 /* #endregion General Utilities */
